--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,8 +7,8 @@ nodeenv==1.2.0
 pbr==3.1.1
 pre-commit==1.3.0
 py==1.4.34
+pyfakefs==3.2
 pytest==3.2.3
-PyYAML==3.12
 requirements-tools==1.1.2
-setuptools==36.5.0
+setuptools==36.6.0
 virtualenv==15.1.0
