--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 asn1crypto==0.23.0
 boto3==1.4.7
-botocore==1.7.25
-cffi==1.11.1
-cryptography==2.0.3
+botocore==1.7.28
+cffi==1.11.2
+colorlog==3.1.0
+cryptography==2.1.1
 docutils==0.14
 idna==2.6
 jmespath==0.9.3
 pycparser==2.18
 python-dateutil==2.6.1
+PyYAML==3.12
 s3transfer==0.1.11
 six==1.11.0
