--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 commands =
     check-requirements
     coverage erase
-    coverage run -m pytest {posargs:tests}
+    coverage run -m pytest {posargs:tests} -s -v
     coverage report --show-missing
     pre-commit install -f --install-hooks
     pre-commit run --all-files
