create backup directory tree

--- a/backuppy.conf
+++ b/backuppy.conf
@@ -1,2 +1,7 @@
-directories:
-    ../../tmp:
+---
+backups:
+    local_backup_1:
+        directories:
+            - /home/drmorr/tmp
+        location: /tmp/backuppy
+        protocol: local
