--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,14 +1,18 @@
-aspy.yaml==1.0.0
-cached-property==1.3.1
-coverage==4.4.1
-identify==1.0.6
+aspy.yaml==1.1.0
+attrs==17.4.0
+cached-property==1.4.2
+cfgv==1.0.0
+coverage==4.5.1
+identify==1.0.13
 mock==2.0.0
-nodeenv==1.2.0
-pbr==3.1.1
-pre-commit==1.3.0
-py==1.4.34
-pyfakefs==3.2
-pytest==3.2.3
+more-itertools==4.1.0
+nodeenv==1.3.0
+pbr==4.0.2
+pluggy==0.6.0
+pre-commit==1.8.2
+py==1.5.3
+pyfakefs==3.4.1
+pytest==3.5.1
 requirements-tools==1.1.2
-setuptools==36.6.0
-virtualenv==15.1.0
+setuptools==39.0.1
+virtualenv==15.2.0
