--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-asn1crypto==0.23.0
-boto3==1.4.7
-botocore==1.7.28
-cffi==1.11.2
-colorlog==3.1.0
-cryptography==2.1.1
+asn1crypto==0.24.0
+boto3==1.7.10
+botocore==1.10.10
+cffi==1.11.5
+colorlog==3.1.4
+cryptography==2.2.2
 docutils==0.14
+edlib==1.2.3.post1
 idna==2.6
 jmespath==0.9.3
 pycparser==2.18
-python-dateutil==2.6.1
+PyStaticConfiguration==0.10.3
+python-dateutil==2.7.2
 PyYAML==3.12
-s3transfer==0.1.11
+s3transfer==0.1.13
 six==1.11.0
