added docstrings and type annotations

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ skipsdist = True
 [testenv]
 commands =
     check-requirements
+    mypy backuppy --config-file mypy.ini
     coverage erase
     coverage run -m pytest {posargs:tests} -s -v
     coverage report --show-missing
