--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -3,19 +3,20 @@ atomicwrites==1.1.5
 attrs==18.1.0
 backcall==0.1.0
 cached-property==1.4.2
-cfgv==1.0.0
+cfgv==1.1.0
 coverage==4.5.1
 decorator==4.3.0
-identify==1.0.18
+identify==1.1.0
 ipdb==0.11
 ipython==6.4.0
 ipython-genutils==0.2.0
 jedi==0.12.0
 mock==2.0.0
 more-itertools==4.2.0
+mypy==0.610
 nodeenv==1.3.0
 parso==0.2.1
-pbr==4.0.3
+pbr==4.0.4
 pexpect==4.6.0
 pickleshare==0.7.4
 pluggy==0.6.0
@@ -25,11 +26,12 @@ ptyprocess==0.5.2
 py==1.5.3
 pyfakefs==3.4.1
 Pygments==2.2.0
-pytest==3.6.0
+pytest==3.6.1
 requirements-tools==1.2.0
 setuptools==39.2.0
 simplegeneric==0.8.1
 toml==0.9.4
 traitlets==4.3.2
+typed-ast==1.1.0
 virtualenv==16.0.0
 wcwidth==0.1.7
