updated arg parsing

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,8 @@ deps =
 [testenv:venv]
 basepython = /usr/bin/python3.6
 envdir = venv
-commands =
+commands = 
+    true
 
 [flake8]
 max-line-length: 121
