--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,37 +1,38 @@
-aspy.yaml==1.1.1
-atomicwrites==1.1.5
-attrs==18.1.0
+aspy.yaml==1.2.0
+atomicwrites==1.3.0
+attrs==19.1.0
 backcall==0.1.0
-cached-property==1.4.2
-cfgv==1.1.0
-coverage==4.5.1
-decorator==4.3.0
-identify==1.1.0
-ipdb==0.11
-ipython==6.4.0
+cfgv==1.6.0
+coverage==4.5.3
+decorator==4.4.0
+identify==1.4.2
+importlib-metadata==0.9
+importlib-resources==1.0.2
+ipdb==0.12
+ipython==7.5.0
 ipython-genutils==0.2.0
-jedi==0.12.0
-mock==2.0.0
-more-itertools==4.2.0
-mypy==0.610
-nodeenv==1.3.0
-parso==0.2.1
-pbr==4.0.4
-pexpect==4.6.0
-pickleshare==0.7.4
-pluggy==0.6.0
-pre-commit==1.10.1
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-py==1.5.3
-pyfakefs==3.4.1
-Pygments==2.2.0
-pytest==3.6.1
-requirements-tools==1.2.0
-setuptools==39.2.0
-simplegeneric==0.8.1
-toml==0.9.4
+jedi==0.13.3
+mock==3.0.5
+more-itertools==7.0.0
+mypy==0.701
+mypy-extensions==0.4.1
+nodeenv==1.3.3
+parso==0.4.0
+pexpect==4.7.0
+pickleshare==0.7.5
+pluggy==0.11.0
+pre-commit==1.16.0
+prompt-toolkit==2.0.9
+ptyprocess==0.6.0
+py==1.8.0
+pyfakefs==3.5.8
+Pygments==2.3.1
+pytest==4.4.1
+requirements-tools==1.2.1
+setuptools==41.0.1
+toml==0.10.0
 traitlets==4.3.2
-typed-ast==1.1.0
-virtualenv==16.0.0
+typed-ast==1.3.5
+virtualenv==16.5.0
 wcwidth==0.1.7
+zipp==0.4.0
