--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 asn1crypto==0.24.0
-boto3==1.7.35
-botocore==1.10.35
-cffi==1.11.5
-colorlog==3.1.4
-cryptography==2.2.2
+boto3==1.9.144
+botocore==1.12.144
+cffi==1.12.3
+colorlog==4.0.2
+cryptography==2.6.1
 docutils==0.14
-edlib==1.2.3.post1
-idna==2.7
-jmespath==0.9.3
-pycparser==2.18
-PyStaticConfiguration==0.10.3
-python-dateutil==2.7.3
-PyYAML==3.12
-s3transfer==0.1.13
-six==1.11.0
+edlib==1.2.4.post1
+jmespath==0.9.4
+pycparser==2.19
+PyStaticConfiguration==0.10.4
+python-dateutil==2.8.0
+PyYAML==5.1
+s3transfer==0.2.0
+six==1.12.0
+urllib3==1.24.3
