--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ commands =
     check-requirements
     mypy backuppy --config-file mypy.ini
     coverage erase
-    coverage run -m pytest {posargs:tests} -s -v
+    coverage run -m pytest {posargs:tests}
     coverage report --show-missing
     pre-commit install -f --install-hooks
     pre-commit run --all-files
@@ -22,4 +22,5 @@ commands =
     true
 
 [flake8]
-max-line-length: 121
+max-line-length = 121
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703
