fixing up tests and adding itests

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,10 @@ envdir = venv
 commands =
     true
 
+[testenv:itest]
+commands =
+    pytest -svvx itests
+
 [flake8]
 max-line-length = 121
 ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703
