--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,38 +1,29 @@
-aspy.yaml==1.2.0
+aspy.yaml==1.3.0
 atomicwrites==1.3.0
 attrs==19.1.0
-backcall==0.1.0
+behave==1.2.6
 cfgv==1.6.0
 coverage==4.5.3
-decorator==4.4.0
-identify==1.4.2
-importlib-metadata==0.9
+identify==1.4.3
+importlib-metadata==0.15
 importlib-resources==1.0.2
-ipdb==0.12
-ipython==7.5.0
-ipython-genutils==0.2.0
-jedi==0.13.3
 mock==3.0.5
 more-itertools==7.0.0
 mypy==0.701
 mypy-extensions==0.4.1
 nodeenv==1.3.3
-parso==0.4.0
-pexpect==4.7.0
-pickleshare==0.7.5
+parse==1.12.0
+parse-type==0.4.2
 pluggy==0.11.0
-pre-commit==1.16.0
-prompt-toolkit==2.0.9
-ptyprocess==0.6.0
+pre-commit==1.16.1
 py==1.8.0
 pyfakefs==3.5.8
-Pygments==2.3.1
-pytest==4.4.1
+PyHamcrest==1.9.0
+pytest==4.5.0
 requirements-tools==1.2.1
 setuptools==41.0.1
 toml==0.10.0
-traitlets==4.3.2
 typed-ast==1.3.5
-virtualenv==16.5.0
+virtualenv==16.6.0
 wcwidth==0.1.7
-zipp==0.4.0
+zipp==0.5.1
