--- a/backuppy.conf
+++ b/backuppy.conf
@@ -3,5 +3,6 @@ backups:
     local_backup_1:
         directories:
             - /home/drmorr/tmp
-        location: /tmp/backuppy
-        protocol: local
+        protocol:
+            type: local
+            location: /tmp/backuppy
