--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -5,5 +5,6 @@ backups:
       - dont_back_me_up.*
     directories:
       - ./itests/data
-    location: ./itests/backup
-    protocol: local
+    protocol:
+        type: local
+        location: ./itests/backup
