--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands =
     mypy backuppy --config-file mypy.ini
     coverage erase
     coverage run -m pytest {posargs:tests}
-    coverage report --show-missing
+    coverage report --show-missing --fail-under 99
     pre-commit install -f --install-hooks
     pre-commit run --all-files
 deps =
@@ -26,5 +26,5 @@ commands =
     pytest -svvx itests
 
 [flake8]
-max-line-length = 121
+max-line-length = 101
 ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703
