--- a/tox.ini
+++ b/tox.ini
@@ -27,4 +27,4 @@ commands =
 
 [flake8]
 max-line-length = 101
-ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703,E741
