itests for manifest guarantees

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
-envlist = py36
+envlist = py37
 skipsdist = True
 
 [testenv]
+basepython = /usr/bin/python3.7
 commands =
     check-requirements
     mypy backuppy --config-file mypy.ini
@@ -16,15 +17,16 @@ deps =
     -rrequirements-dev.txt
 
 [testenv:venv]
-basepython = /usr/bin/python3.6
+basepython = /usr/bin/python3.7
 envdir = venv
 commands =
     true
 
 [testenv:itest]
+basepython = /usr/bin/python3.7
 commands =
     pytest -svvx itests
 
 [flake8]
 max-line-length = 101
-ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703,E741
+ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703,E741,W605
