fixing bug with multiple directories

--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -5,6 +5,7 @@ backups:
       - dont_back_me_up.*
     directories:
       - ./itests/data
+      - ./itests/data2
     protocol:
-        type: local
-        location: ./itests/backup
+      type: local
+      location: ./itests/backup
