--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,27 +2,29 @@ aspy.yaml==1.3.0
 atomicwrites==1.3.0
 attrs==19.1.0
 behave==1.2.6
-cfgv==1.6.0
+cfgv==2.0.0
 coverage==4.5.3
-identify==1.4.3
-importlib-metadata==0.15
+identify==1.4.5
+importlib-metadata==0.18
 mock==3.0.5
-more-itertools==7.0.0
-mypy==0.701
+more-itertools==7.1.0
+mypy==0.711
 mypy-extensions==0.4.1
 nodeenv==1.3.3
+packaging==19.0
 parse==1.12.0
 parse-type==0.4.2
-pluggy==0.11.0
-pre-commit==1.16.1
+pluggy==0.12.0
+pre-commit==1.17.0
 py==1.8.0
-pyfakefs==3.5.8
+pyfakefs==3.6
 PyHamcrest==1.9.0
-pytest==4.5.0
+pyparsing==2.4.0
+pytest==5.0.1
 requirements-tools==1.2.1
 setuptools==41.0.1
 toml==0.10.0
-typed-ast==1.3.5
-virtualenv==16.6.0
+typed-ast==1.4.0
+virtualenv==16.6.1
 wcwidth==0.1.7
 zipp==0.5.1
