--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 asn1crypto==0.24.0
-boto3==1.9.156
-botocore==1.12.156
+boto3==1.9.183
+botocore==1.12.183
 cffi==1.12.3
 colorlog==4.0.2
-cryptography==2.6.1
+cryptography==2.7
+dateparser==0.7.1
 docutils==0.14
 edlib==1.2.4.post1
 jmespath==0.9.4
 pycparser==2.19
 PyStaticConfiguration==0.10.4
 python-dateutil==2.8.0
-PyYAML==5.1
-s3transfer==0.2.0
+pytz==2019.1
+PyYAML==5.1.1
+regex==2019.6.8
+s3transfer==0.2.1
 six==1.12.0
+tabulate==0.8.3
+tzlocal==1.5.1
 urllib3==1.25.3
