--- a/tox.ini
+++ b/tox.ini
@@ -3,30 +3,32 @@ envlist = py37
 skipsdist = True
 
 [testenv]
-basepython = /usr/bin/python3.7
 commands =
     check-requirements
     mypy backuppy --config-file mypy.ini
     coverage erase
     coverage run -m pytest {posargs:tests}
     coverage report --show-missing --fail-under 95
-    pre-commit install -f --install-hooks
-    pre-commit run --all-files
 deps =
     -rrequirements.txt
     -rrequirements-dev.txt
 
 [testenv:venv]
-basepython = /usr/bin/python3.7
 envdir = venv
 commands =
     true
 
 [testenv:itest]
-basepython = /usr/bin/python3.7
 commands =
     pytest -svvx itests
 
 [flake8]
 max-line-length = 101
 ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703,E741,W605
+
+[pytest]
+markers =
+    no_mocksaveload: don't mock the save/load function in the backup store
+filterwarnings =
+    ignore:.*ABC.*collections\.abc:DeprecationWarning
+    ignore:.*imp.*importlib:DeprecationWarning
