move disable comp/enc into config file

--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -9,3 +9,6 @@ backups:
     protocol:
       type: local
       location: ./itests/backup
+    options:
+      disable_encryption: true
+      disable_compression: true
