--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -1,6 +1,7 @@
 ---
 backups:
   data1_backup:
+    private_key_filename: ./itests/itest.pem
     exclusions:
       - dont_back_me_up.*
     directories:
@@ -10,5 +11,5 @@ backups:
       type: local
       location: ./itests/backup
     options:
-      disable_encryption: true
-      disable_compression: true
+      - use_encryption: false
+        use_compression: false
