end-to-end tests

--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,8 @@ envlist = py37
 skipsdist = True
 
 [testenv]
+basepython = python3.7
+envdir = .tox/testing
 commands =
     check-requirements
     mypy backuppy --config-file mypy.ini
@@ -19,8 +21,14 @@ commands =
     true
 
 [testenv:itest]
+envdir = .tox/testing
 commands =
     pytest -svvx itests
+
+[testenv:e2e]
+envdir = .tox/testing
+commands =
+    {toxinidir}/e2e/e2e.sh
 
 [flake8]
 max-line-length = 101
