dry-run flag and re-architecting itests

--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -10,5 +10,6 @@ backups:
       type: local
       location: ./itests/backup
     options:
-      - use_encryption: false
+      - discard_diff_percentage: null
+        use_encryption: false
         use_compression: false
