--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 asn1crypto==0.24.0
-boto3==1.9.219
-botocore==1.12.219
+boto3==1.9.230
+botocore==1.12.230
+bsdiff4==1.1.5
 cffi==1.12.3
 colorlog==4.0.2
 cryptography==2.7
-dateparser==0.7.1
+dateparser==0.7.2
 docutils==0.15.2
-edlib==1.3.4
 jmespath==0.9.4
 mypy-extensions==0.4.1
 pycparser==2.19
