--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,13 @@ deps =
 
 [testenv:venv]
 envdir = venv
+deps =
+    -rrequirements.txt
+    -rrequirements-dev.txt
 commands =
     true
+whitelist_externals =
+    /bin/true
 
 [testenv:itest]
 envdir = .tox/testing
@@ -36,7 +41,7 @@ ignore = E121,E123,E126,E226,E24,E704,W503,W504,E702,E703,E741,W605
 
 [pytest]
 markers =
-    no_mocksaveload: don't mock the save/load function in the backup store
+    no_mocksaveload: "don't mock the save/load function in the backup store"
 filterwarnings =
     ignore:.*ABC.*collections\.abc:DeprecationWarning
     ignore:.*imp.*importlib:DeprecationWarning
