--- a/requirements-dev-minimal.txt
+++ b/requirements-dev-minimal.txt
@@ -1,6 +1,9 @@
 behave
 coverage
+ecdsa==0.14.1  # some dumb dep resolver is too stupid to figure this out
+flake8
 mock
+moto
 mypy
 pre-commit
 pyfakefs
