--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-boto3==1.14.51
-botocore==1.17.51
+boto3==1.14.54
+botocore==1.17.54
 bsdiff4==1.2.0
 cffi==1.14.2
 colorlog==4.2.1
 cryptography==3.1
 dateparser==0.7.6
 docutils==0.15.2
+iteration-utilities==0.10.1
 jmespath==0.10.0
 mypy-extensions==0.4.3
 pycparser==2.20
