--- a/requirements-dev-minimal.txt
+++ b/requirements-dev-minimal.txt
@@ -1,3 +1,4 @@
+atomicwrites  # needed on windows for some reason
 behave
 coverage
 ecdsa==0.14.1  # some dumb dep resolver is too stupid to figure this out
@@ -10,3 +11,5 @@ pyfakefs
 pyhamcrest
 pytest
 requirements-tools
+types-dateparser
+types-tabulate
