--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,67 +1,47 @@
-appdirs==1.4.4
-attrs==20.1.0
-aws-sam-translator==1.26.0
-aws-xray-sdk==2.6.0
+atomicwrites==1.4.0
+attrs==21.2.0
+backports.entry-points-selectable==1.1.0
 behave==1.2.6
-boto==2.49.0
-certifi==2020.6.20
-cfgv==3.2.0
-cfn-lint==0.35.1
-chardet==3.0.4
-coverage==5.2.1
-decorator==4.4.2
-distlib==0.3.1
-docker==4.3.1
+certifi==2021.5.30
+cfgv==3.3.0
+charset-normalizer==2.0.3
+coverage==5.5
+distlib==0.3.2
 ecdsa==0.14.1
 filelock==3.0.12
-flake8==3.8.3
-future==0.18.2
-identify==1.4.30
-idna==2.8
-importlib-metadata==1.7.0
-iniconfig==1.0.1
-Jinja2==2.11.2
-jsondiff==1.1.2
-jsonpatch==1.26
-jsonpickle==1.4.1
-jsonpointer==2.0
-jsonschema==3.2.0
-junit-xml==1.9
-MarkupSafe==1.1.1
+flake8==3.9.2
+identify==2.2.11
+idna==3.2
+iniconfig==1.1.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
 mccabe==0.6.1
-mock==4.0.2
-more-itertools==8.5.0
-moto==1.3.14
-mypy==0.782
-networkx==2.5
-nodeenv==1.5.0
-packaging==20.4
-parse==1.17.0
+mock==4.0.3
+more-itertools==8.8.0
+moto==2.2.0
+mypy==0.910
+nodeenv==1.6.0
+packaging==21.0
+parse==1.19.0
 parse-type==0.5.2
+platformdirs==2.1.0
 pluggy==0.13.1
-pre-commit==2.7.1
-py==1.9.0
-pyasn1==0.4.8
-pycodestyle==2.6.0
-pyfakefs==4.1.0
-pyflakes==2.2.0
+pre-commit==2.13.0
+py==1.10.0
+pycodestyle==2.7.0
+pyfakefs==4.5.0
+pyflakes==2.3.1
 PyHamcrest==2.0.2
 pyparsing==2.4.7
-pyrsistent==0.16.0
-pytest==6.0.1
-python-jose==3.2.0
-requests==2.24.0
-requirements-tools==1.2.3
-responses==0.12.0
-rsa==4.6
-setuptools==50.1.0
-sshpubkeys==3.1.0
-toml==0.10.1
-typed-ast==1.4.1
-typing-extensions==3.7.4.3
-virtualenv==20.0.31
-websocket-client==0.57.0
-Werkzeug==1.0.1
-wrapt==1.12.1
+pytest==6.2.4
+requests==2.26.0
+requirements-tools==2.0.0
+responses==0.13.3
+setuptools==57.4.0
+toml==0.10.2
+types-dateparser==0.1.3
+types-tabulate==0.1.1
+typing-extensions==3.10.0.0
+virtualenv==20.6.0
+Werkzeug==2.0.1
 xmltodict==0.12.0
-zipp==3.1.0
