--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
-boto3==1.14.54
-botocore==1.17.54
-bsdiff4==1.2.0
-cffi==1.14.2
-colorlog==4.2.1
-cryptography==3.1
-dateparser==0.7.6
-docutils==0.15.2
-iteration-utilities==0.10.1
+boto3==1.18.8
+botocore==1.21.8
+bsdiff4==1.2.1
+cffi==1.14.6
+colorama==0.4.4
+colorlog==5.0.1
+cryptography==3.4.7
+dateparser==1.0.0
+iteration-utilities==0.11.0
 jmespath==0.10.0
 mypy-extensions==0.4.3
 pycparser==2.20
 PyStaticConfiguration==0.10.5
-python-dateutil==2.8.1
-pytz==2020.1
-PyYAML==5.3.1
-regex==2020.7.14
-s3transfer==0.3.3
-six==1.15.0
-tabulate==0.8.7
+python-dateutil==2.8.2
+pytz==2021.1
+PyYAML==5.4.1
+regex==2021.7.6
+s3transfer==0.5.0
+six==1.16.0
+tabulate==0.8.9
 tzlocal==2.1
-urllib3==1.25.10
+urllib3==1.26.6
