--- a/itests/itest.conf
+++ b/itests/itest.conf
@@ -1,6 +1,7 @@
 ---
 backups:
   data1_backup:
+    private_key_filename: ./itests/itest.pem
     exclusions:
       - dont_back_me_up.*
     directories:
