--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 boto3==1.18.8
 botocore==1.21.8
-bsdiff4==1.2.1
+git+https://github.com/drmorr0/bsdiff4@7c878c2
 cffi==1.14.6
 colorama==0.4.4
 colorlog==5.0.1
