--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 basepython = python3.9
 envdir = .tox/testing
 commands =
-    check-requirements
+    # check-requirements
     mypy backuppy --config-file mypy.ini
     coverage erase
     coverage run -m pytest {posargs:tests}
