--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 boto3==1.18.8
 botocore==1.21.8
-git+https://github.com/drmorr0/bsdiff4@7c878c2
+bsdiff4==1.2.3
 cffi==1.14.6
 colorama==0.4.4
 colorlog==5.0.1
@@ -13,7 +13,7 @@ pycparser==2.20
 PyStaticConfiguration==0.10.5
 python-dateutil==2.8.2
 pytz==2021.1
-PyYAML==5.4.1
+PyYAML==6.0.1
 regex==2021.7.6
 s3transfer==0.5.0
 six==1.16.0
